--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="contenido-header contenedor">
             <div class="barra">
                 <div class="logo">
-
+                    <img src="build/img/logo.svg" alt="logo cafetería">
                 </div>
 
                 <nav class="nav-principal">
