--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
             </div>
 
         </div>
-      
-      
-
     </header>
+
+    <main class="contenedor contenido-principal text-center">
+        <h2> <span> Conoce más</span> sobre nosotros</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi dignissimos pariatur saepe repellat culpa temporibus iusto architecto voluptatibus consequatur non doloremque, minus sed itaque sint, reiciendis ducimus distinctio laboriosam harum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum reprehenderit asperiores, adipisci saepe quidem odio. Nam dolorem adipisci maiores culpa aliquam tempore eius. Mollitia velit, sit repudiandae iure ea eveniet.</p>
+    </main>
 </body>
 </html>
