se terrmina posicionamiento íconos teléfono

--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cafetería Cumbi</title>
-    <link rel="shortcut icon" href="build/img/favicon.png">
+    <link rel="shortcut icon" href="build/">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,700&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Bona+Nova&family=Raleway:wght@700;900&family=Roboto:wght@700;900&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="build/css/app.css">
 </head>
 <body>
@@ -37,8 +39,30 @@
     </header>
 
     <main class="contenedor contenido-principal text-center">
-        <h2> <span> Conoce más</span> sobre nosotros</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi dignissimos pariatur saepe repellat culpa temporibus iusto architecto voluptatibus consequatur non doloremque, minus sed itaque sint, reiciendis ducimus distinctio laboriosam harum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum reprehenderit asperiores, adipisci saepe quidem odio. Nam dolorem adipisci maiores culpa aliquam tempore eius. Mollitia velit, sit repudiandae iure ea eveniet.</p>
+            <section class="conoce"> 
+                <h2> <span> Conoce más</span> sobre nosotros</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi dignissimos pariatur saepe repellat culpa temporibus iusto architecto voluptatibus consequatur non doloremque, minus sed itaque sint, reiciendis ducimus distinctio laboriosam harum? Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum reprehenderit asperiores, adipisci saepe quidem odio. Nam dolorem adipisci maiores culpa aliquam tempore eius. Mollitia velit, sit repudiandae iure ea eveniet.</p>
+            </section>
+
+            <section class="iconos">
+                <ul class="listado-iconos">
+                    <li>
+                        <img src="build/img/icono_cafe.svg" alt="ícono café">
+                        <p>Café</p>
+                    </li>
+
+                    <li>
+                        <img src="build/img/icono_postre.svg" alt="ícono postre">
+                        <p>Postre</p>
+                    </li>
+
+                    <li>
+                        <img src="build/img/icono_te.svg" alt="ícono té">
+                        <p>Té</p>
+                    </li>
+                </ul>
+            </section>
+
     </main>
 </body>
 </html>
