--- a/index.html
+++ b/index.html
@@ -63,6 +63,55 @@
                 </ul>
             </section>
 
+            <section class="experiencia">
+                <h2> <span> Vive la</span> Experiencia</h2>
+
+                <div class="galeria">
+                    <div class="imagen">
+                        <img src="build/img/galeria/galeria_01.jpg" alt="Galería">
+                     </div>
+
+                    <div class="imagen">
+                        <img src="build/img/galeria/galeria_02.jpg" alt="Galería">
+                    </div>
+
+                    <div class="imagen">
+                        <img src="build/img/galeria/galeria_03.jpg" alt="Galería">
+                    </div>
+
+                    <div class="imagen">
+                        <img src="build/img/galeria/galeria_04.jpg" alt="Galería">
+                    </div>
+
+                    <div class="imagen">
+                        <img src="build/img/galeria/galeria_05.jpg" alt="Galería">
+                    </div>
+
+                    <div class="imagen">
+                        <img src="build/img/galeria/galeria_06.jpg" alt="Galería">
+                    </div>
+
+                    <div class="imagen">
+                        <img src="build/img/galeria/galeria_07.jpg" alt="Galería">
+                    </div>
+
+                    <div class="imagen">
+                        <img src="build/img/galeria/galeria_08.jpg" alt="Galería">
+                    </div>
+
+                    <div class="imagen">
+                        <img src="build/img/galeria/galeria_09.jpg" alt="Galería">
+                    </div>
+
+                    <div class="imagen">
+                        <img src="build/img/galeria/galeria_10.jpg" alt="Galería">
+                    </div>
+
+
+                </div>
+
+            </section>
+
     </main>
 </body>
 </html>
