inicio css testimoniales

--- a/index.html
+++ b/index.html
@@ -189,12 +189,12 @@
 
      </section>
 
-     <section class="nuestros-testimoniales contenedor">
+     <section class="nuestros-testimoniales contenedor margin-negativo-10 bg-whithe">
         <h2 > <span>Lo que dicen nuestros</span>Clientes</h2>
         <div class="testimonial">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi aspernatur quas dignissimos voluptatem animi, sequi quo fugiat omnis officia maiores architecto. Maiores laboriosam ex impedit nihil corrupti vero id voluptatem.</p>
 
-            <p class="autor" >Cumbi Tara Nar</p>
+            <p class="autor" >Cumbi Tara Nariño</p>
 
         </div>
      </section>
