inicio html footer

--- a/index.html
+++ b/index.html
@@ -199,5 +199,20 @@
         </div>
      </section>
 
+     <footer class="footer">
+        <div class="contenedor footer-contenido ">
+           <div class="footer-box ubicacion">
+
+           </div>
+           <div class="footer-box reservacion">
+
+           </div>
+           <div class="footer-box horario">
+
+           </div>
+
+        </div>
+     </footer>
+
 </body>
 </html>
