termina html footer

--- a/index.html
+++ b/index.html
@@ -202,16 +202,26 @@
      <footer class="footer">
         <div class="contenedor footer-contenido ">
            <div class="footer-box ubicacion">
+               <h3>Ubicación</h3>
+               <p>Calle 9 carrera 27</p>
+               <p>Bucaramanga. Santander</p>
 
            </div>
            <div class="footer-box reservacion">
+                <h3>reservación</h3>
+                <p>Teléfono 3157909279</p>
+                <a href="tel:+3157909279">LLamar</a>
 
            </div>
            <div class="footer-box horario">
-
+                <h3>Horario</h3>
+                <p>Lun-Jue: 11.00 - 22.00</p>
+                <p>Vie-Sab: 09.00 - 24.00</p>
+                <p>Domingo: Cerrado</p>
            </div>
 
         </div>
+        <p class="copyrigth">Cumbi, derechos reservados</p>
      </footer>
 
 </body>
