--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
      </section>
 
      <footer class="footer">
-        <div class="contenedor footer-contenido ">
+        <div class="contenedor contenido-footer bg-whithe">
            <div class="footer-box ubicacion">
                <h3>Ubicación</h3>
                <p>Calle 9 carrera 27</p>
