--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
            <div class="footer-box reservacion">
                 <h3>reservación</h3>
                 <p>Teléfono 3157909279</p>
-                <a href="tel:+3157909279">LLamar</a>
+                <a href="tel:+3157909279">Llamar</a>
 
            </div>
            <div class="footer-box horario">
@@ -221,7 +221,7 @@
            </div>
 
         </div>
-        <p class="copyrigth">Cumbi, derechos reservados</p>
+        <p class="copyright">Cumbi, derechos reservados</p>
      </footer>
 
 </body>
