--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
            </div>
 
         </div>
-        <p class="copyright">Cumbi, derechos reservados</p>
+        <p class="copyright">Cumbi, derechos reservados ® 2022</p>
      </footer>
 
 </body>
