--- a/nosotros.html
+++ b/nosotros.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    <header class="header header-inicio">
+    <header class="header header-nosotros">
         <div class="contenido-header contenedor">
             <div class="barra">
                 <div class="logo">
@@ -24,8 +24,8 @@
                 </div>
 
                 <nav class="nav-principal">
-                    <a class="activo" href="index.html">Inicio</a>
-                    <a href="nosotros.html">Nosotros</a>
+                    <a href="index.html">Inicio</a>
+                    <a class="activo" href="nosotros.html">Nosotros</a>
                     <a href="proceso.html">Proceso</a>
                     <a href="menu.html">Menú</a>
                     <a href="galeria.html">Galería</a>
@@ -34,14 +34,27 @@
             </div>
 
             <div class="texto-header">
-                <h1>Disfruta una deliciosa taza de café</h1>
+                <h1>Una nueva experiencia cada día</h1>
             </div>
 
         </div>
     </header>
 
     <main class="contenedor contenido-principal">
+        <h2><span>Conoce más</span> sobre nosotros </h2>
 
+        <div class="contenido-nosotros">
+            <img src="build/img/nosotros_sidebar.jpg" alt="">
+        </div>
+
+        <div class="texto">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, laudantium maiores. Sit delectus totam ab nemo ipsa deserunt, odit corrupti neque alias harum quis consequuntur cum sequi iste, ex corporis.</p>
+
+            <blockquote>
+                Excelente sabor</blockquote>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, laudantium maiores. Sit delectus totam ab nemo
+                ipsa deserunt, odit corrupti neque alias harum quis consequuntur cum sequi iste, ex corporis.</p>
+        </div>
     </main>
 
 
