--- a/proceso.html
+++ b/proceso.html
@@ -40,7 +40,7 @@
         </div>
     </header>
 
-    <main class="contenedor contenido-principal">
+    <main class="contenedor contenido-proceso">
 
          <div class="proceso-cafe">
             <div class="imagen">
