--- a/menu.html
+++ b/menu.html
@@ -41,7 +41,7 @@
     </header>
 
     <main class="contenedor contenido-principal padding-bottom-0">
-        <h2><span>Utilizamos los</span>mejores ingredientes</h2>
+        <h2><span>Utilizamos los</span>Mejores Ingredientes</h2>
         <div class="contenido-menu">
             <div class="texto">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati pariatur nisi temporibus, optio sit soluta repudiandae dolor architecto officiis eaque, cupiditate tenetur? Est ullam tempore sapiente iure eaque tempora corporis dolor architecto officiis eaque, cupiditate tenetur? Est ullam tempore sapiente iure eaque dolor architecto officiis eaque, cupiditate tenetur? Est ullam tempore sapiente iure eaque</p>
