--- a/nosotros.html
+++ b/nosotros.html
@@ -41,7 +41,7 @@
     </header>
 
     <main class="contenedor contenido-principal">
-        <h2><span>Conoce más</span> sobre nosotros </h2>
+        <h2><span>Conoce más</span> Sobre Nosotros </h2>
 
         <div class="contenido-nosotros">
             <div class="imagen">
