scss responsive section galeria

--- a/base.html
+++ b/base.html
@@ -54,12 +54,12 @@
                 <p>Bucaramanga. Santander</p>
 
             </div>
-            <div class="footer-box reservacion">
-                <h3>reservación</h3>
-                <p>Teléfono 3157909279</p>
-                <a href="tel:+3157909279">Llamar</a>
-
-            </div>
+        <div class="footer-box reservacion">
+            <h3>Reservación</h3>
+            <p>Teléfono 3157909279</p>
+            <a href="tel:+3157909279">Llamar para reservar</a>
+        
+        </div>
             <div class="footer-box horario">
                 <h3>Horario</h3>
                 <p>Lun-Jue: 11.00 - 22.00</p>
