--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
      </section>
 
      <section class="nuestros-testimoniales contenedor margin-negativo-10 bg-whithe">
-        <h2 > <span>Lo que dicen nuestros</span>Clientes</h2>
+        <h2 > <span>Lo que dicen nuestros</span> Distinguidos Clientes</h2>
         <div class="testimonial">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi aspernatur quas dignissimos voluptatem animi, sequi quo fugiat omnis officia maiores architecto. Maiores laboriosam ex impedit nihil corrupti vero id voluptatem.</p>
 
@@ -208,9 +208,9 @@
 
            </div>
            <div class="footer-box reservacion">
-                <h3>reservación</h3>
+                <h3>Reservación</h3>
                 <p>Teléfono 3157909279</p>
-                <a href="tel:+3157909279">Llamar</a>
+                <a href="tel:+3157909279">Llamar para reservar</a>
 
            </div>
            <div class="footer-box horario">
