--- a/menu.html
+++ b/menu.html
@@ -136,10 +136,10 @@
 
             </div>
             <div class="footer-box reservacion">
-                <h3>reservación</h3>
+                <h3>Reservación</h3>
                 <p>Teléfono 3157909279</p>
-                <a href="tel:+3157909279">Llamar</a>
-
+                <a href="tel:+3157909279">Llamar para reservar</a>
+            
             </div>
             <div class="footer-box horario">
                 <h3>Horario</h3>
