--- a/proceso.html
+++ b/proceso.html
@@ -41,7 +41,7 @@
     </header>
 
     <main class="contenedor contenido-principal">
-
+        <h2><span>Así transformamos</span>El mejor café </h2>
          <div class="proceso-cafe">
             <div class="imagen">
                 <img src="build/img/proceso_1.jpg" alt="proceso del café">
@@ -116,12 +116,12 @@
                 <p>Bucaramanga. Santander</p>
 
             </div>
-            <div class="footer-box reservacion">
-                <h3>reservación</h3>
-                <p>Teléfono 3157909279</p>
-                <a href="tel:+3157909279">Llamar</a>
-
-            </div>
+        <div class="footer-box reservacion">
+            <h3>Reservación</h3>
+            <p>Teléfono 3157909279</p>
+            <a href="tel:+3157909279">Llamar para reservar</a>
+        
+        </div>
             <div class="footer-box horario">
                 <h3>Horario</h3>
                 <p>Lun-Jue: 11.00 - 22.00</p>
