inicio html formulario reservar mesa

--- a/contacto.html
+++ b/contacto.html
@@ -43,6 +43,15 @@
     <main class="contenedor contenido-principal">
         <h2> <span> Reserva una mesa </span> Para atenderte con gusto</h2>
 
+        <div class="contenido-contacto">
+            <form>
+                <div class="campo">
+                    <label for="nombre">Nombre:</label>
+                    <input type="text" id="nombre" placeholder="Tu Nombre">
+                </div>
+            </form>
+        </div>
+
     </main>
 
 
