--- a/contacto.html
+++ b/contacto.html
@@ -47,8 +47,34 @@
             <form>
                 <div class="campo">
                     <label for="nombre">Nombre:</label>
-                    <input type="text" id="nombre" placeholder="Tu Nombre">
+                    <input type="text" id="nombre" placeholder="Tu Nombre" required>
                 </div>
+                <div class="campo">
+                    <label for="email">email:</label>
+                    <input type="email" id="email" placeholder="Tu email">
+                </div>
+                <div class="campo">
+                    <label for="personas">Número de Personas:</label>
+                    <select>
+                        <option value="disabled selected">--Seleccione--</option>                        
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                        <option value="4">4</option>
+                        <option value="mas">+ de 4</option>
+                    </select>
+                </div>
+                <div class="campo">
+                    <label for="hora">Hora:</label>
+                    <input type="time" id="hora" min="09:00" max="20:00">
+                </div>
+                    <div class="campo">
+                        <label for="fecha">Fecha:</label>
+                        <input type="date" id="fecha">
+                    </div>
+                    <div class="campo">
+                        <input type="submit" id="Enviar">
+                    </div>
             </form>
         </div>
 
