scss styles formulario

--- a/contacto.html
+++ b/contacto.html
@@ -44,7 +44,7 @@
         <h2> <span> Reserva una mesa </span> Para atenderte con gusto</h2>
 
         <div class="contenido-contacto">
-            <form>
+            <form class="formulario">
                 <div class="campo">
                     <label for="nombre">Nombre:</label>
                     <input type="text" id="nombre" placeholder="Tu Nombre" required>
