finaliza ajustes html y termina web responsive

--- a/proceso.html
+++ b/proceso.html
@@ -29,7 +29,7 @@
                     <a class="activo" href="proceso.html">Proceso</a>
                     <a href="menu.html">Menú</a>
                     <a href="galeria.html">Galería</a>
-                    <a href="contacto.html">Contacto</a>
+                    <a href="contacto.html">Reservas</a>
                 </nav>
             </div>
 
