--- a/contacto.html
+++ b/contacto.html
@@ -29,7 +29,7 @@
                     <a href="proceso.html">Proceso</a>
                     <a href="menu.html">Menú</a>
                     <a href="galeria.html">Galería</a>
-                    <a class="activo"  href="contacto.html">Contacto</a>
+                    <a class="activo"  href="contacto.html">Reservas</a>
                 </nav>
             </div>
 
