--- a/galeria.html
+++ b/galeria.html
@@ -29,7 +29,7 @@
                     <a href="proceso.html">Proceso</a>
                     <a href="menu.html">Menú</a>
                     <a class="activo" href="galeria.html">Galería</a>
-                    <a href="contacto.html">Contacto</a>
+                    <a href="contacto.html">Reservas</a>
                 </nav>
             </div>
 
